API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes)

16-Aug-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added new module lookup options:
		./sword.conf
		../library/mods.d
	Added fix to preserve markup in headings (charcoal)
	Fixed non-UTF8 builds (thanks berkana)

1-Aug-2006	DM Smith <dmsmith@crosswire.org>
	Fixed divineName bug
	Updated q handling to use quote stack
	Update to fix RLT
	Fixed a bug in osis2mod that duplicated a chapter title in the verse
	Normalize whitespace in xml tags
	Updated support for more OSIS markup, including q marker

21-May-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added SWBuf::startsWith, endsWith
	Added entry attribute exposure of multipart words
	Added beginnings of VerseKey subclass which uses TreeKey
	
25-Apr-2006	Troy A. Griffitts <scribe@crosswire.org>
	Changed SWModule::search to fill result set up with more
		specialized SWKey objects, instead of always SWKey
	Changed SWModule::search to use CLucene better for
		non-VerseKey modules
	Added basic proximity searching with CLucene searches
	Added ListKey::sort()

14-Apr-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added EntryAttribute support to SWIG bindings (from mreimer)

29-Mar-2006	Joachim Ansorg <jansorg@crosswire.org>
	Fixed lucene code to work with 0.9.x (tested with 0.9.10)

31-Jan-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added support for OSIS variants
	Added .NET support and update to swig bindings (from lefticus)

28-Nov-2005	Troy A. Griffitts <scribe@crosswire.org>
	Fixed ICUStringMgr toUpper method

19-Nov-2005	Troy A. Griffitts <scribe@crosswire.org>
	Cleaned up headers to remove unnecessary includes

26-Oct-2005	Martin Gruner <mgruner@crosswire.org>
	Added Arabic locale (from Mina Magdy).

17-Oct-2005	Joachim Ansorg <jansorg@crosswire.org>
	Fixed the dutch locale file

21-Sep-2005	Martin Gruner <mgruner@crosswire.org>
	Added Hebrew locale for both Tanach (OT) and 
	Berit Chadashah (NT).

* Release 1.5.8 *
