@@ -44,19 +44,19 @@
 #define PACKAGE_NAME "sword"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "sword 1.5.9"
+#define PACKAGE_STRING "sword 1.5.8"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "sword"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "1.5.9"
+#define PACKAGE_VERSION "1.5.8"
 
 /* Define to 1 if you have the ANSI C header files. */
 #define STDC_HEADERS 1
 
 /* Version number of package */
-#define VERSION "1.5.9"
+#define VERSION "1.5.8"
 
 /* Define to 1 if your processor stores words with the most significant byte
    first (like Motorola and SPARC, unlike Intel and VAX). */
